syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/rank.proto";

// type : "announce_game_over"
// packet_type : DEFAULT
message AnnounceGameOverPayload { repeated Rank ranks = 1; }