syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/payment.proto";

// type : "announce_pay_rent",
// packet_type : DEFAULT
message AnnouncePayRentPayload {
  string payer = 1;
  repeated Payment payments = 2;
  // the updated money of the current player. This normally only affect payer
  // and payee. All other players will receive an unchanged amount.
  int32 my_current_money = 3;
}