syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/coordinate.proto";

// type : "announce_roll"
// packet_type : DEFAULT
message AnnounceRollPayload {
  string player = 1;
  int32 steps = 2;
  // the position of the player before moving. This is used to make sure the
  // rendering of the player is in sync on all clients.
  Coordinate current_position = 3;
  int32 my_money = 4;
}